k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aedes-broker-test
  name: aedes-broker-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aedes-broker-test
  template:
    metadata:
      labels:
        app: aedes-broker-test
    spec:
      containers:
      - image: switchnollie/aedes-broker
        imagePullPolicy: Always
        name: aedes-broker
      dnsPolicy: ClusterFirst
      restartPolicy: Always
