k8s/voyager.yaml
---
# Source: voyager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voyager-operator
  namespace: kube-system
  labels:
    helm.sh/chart: voyager-v12.0.0
    app.kubernetes.io/name: voyager
    app.kubernetes.io/instance: voyager-operator
    app.kubernetes.io/version: "v12.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: admission
    port: 443
    targetPort: 8443
  # Port used to respond to Let's Encrypt HTTP challenges
  - name: acme
    port: 56791
    targetPort: 56791
  selector:
    app.kubernetes.io/name: voyager
    app.kubernetes.io/instance: voyager-operator
---
# Source: voyager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voyager-operator
  namespace: kube-system
  labels:
    helm.sh/chart: voyager-v12.0.0
    app.kubernetes.io/name: voyager
    app.kubernetes.io/instance: voyager-operator
    app.kubernetes.io/version: "v12.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: voyager
      app.kubernetes.io/instance: voyager-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voyager
        app.kubernetes.io/instance: voyager-operator
      annotations:
        checksum/apiregistration.yaml: dcc90677314d86eff99d76416871eac0a2d8d6314e9a19010bc8c0c43e0752e0
    spec:
      serviceAccountName: voyager-operator
      containers:
      - name: voyager
        securityContext:
          {}
        image: appscode/voyager:v12.0.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --cloud-provider=minikube
        - --cloud-config=
        - --v=3
        - --ingress-class=
        - --operator-service=voyager-operator
        - --docker-registry=appscode
        - --haproxy-image-tag=1.9.15-v12.0.0-alpine
        - --haproxy-image-repository=haproxy
        - --exporter-image-tag=v12.0.0
        - --exporter-image-repository=voyager
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --enable-validating-webhook=true
        - --bypass-validating-webhook-xray=false
        - --use-kubeapiserver-fqdn-for-aks=true
        - --enable-analytics=true
        ports:
        - containerPort: 8443
        - containerPort: 56791
        resources:
          {}
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: voyager-operator-apiserver-cert
      securityContext:
        fsGroup: 65535
      nodeSelector:
        beta.kubernetes.io/arch: amd64
        beta.kubernetes.io/os: linux
